dp/fin-app-ws/dp-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: $RELEASE_NAME-web-svc
  namespace: $TARGET_NAMESPACE
spec:
  selector:
    app.kubernetes.io/instance: $TARGET_NAMESPACE-$RELEASE_NAME
  ports:
    - protocol: TCP
      port: 9090
      name: web-mgmt
    - protocol: TCP
      port: 7080
      name: web-socket-svc
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: $RELEASE_NAME-web
  namespace: $TARGET_NAMESPACE
spec:
  to:
    kind: Service
    name: $RELEASE_NAME-web-svc
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: $RELEASE_NAME-web-socket
  namespace: $TARGET_NAMESPACE
spec:
  to:
    kind: Service
    name: $RELEASE_NAME-web-svc
    weight: 100
  port:
    targetPort: 7080
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
